--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# local env files, add .env so doesn't show when commit
 .env*.local
+.env
+
 
 # vercel
 .vercel
